edited the content with contactus

--- a/Pages/Contact.cshtml
+++ b/Pages/Contact.cshtml
@@ -4,16 +4,36 @@
     ViewData["Title"] = "Contact";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@Model.Message</h3>
+<h3></h3>
+<section>
+    
+</section>
+ <section id="contact" class="contact section has-pattern">
+        <div class="container">
+            <div class="contact-inner">
+                <h2 class="title  text-center">Who We are</h2>
+                <p class="intro  text-center">
+                        We are Brainchild Didactics, We are a public benefit organization dedicated to helping and training people who are pursuing a career as a software engineer.
+                        We help anyone who are looking for a programming job. We teach them how to code and make them work on live and open source projects so they can focus on becoming a software engineer. 
+                         </p>                       
+                         <p>
+                        Brainchild Didactics <br/>
+                        26/998,Geethanjali House<br/>
+                        St Jude Road,Thevera P O<br/>
+                        Ernakulam,Kerala,INDIA <br/>
+                        P: 91-6282537900 <br/>
+                        support@brainchildservices.com            <br/>
+                    </p>
+                <div class="clearfix"></div>                
+                <div class="info text-center">
+                    <h4 class="sub-title">Get Connected</h4>                    
+                    <ul class="social-icons list-inline">
+                        <li><a href="https://twitter.com/deguggingio" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.facebook.com/openlearningportal/" target="_blank"><i class="fa fa-facebook"></i></a></li>                      
+                        <li><a href="https://openlearningportal.org/contactus"><i class="fa fa-envelope"></i></a></li>                                     
+                    </ul>
+                </div><!--//info-->
+            </div><!--//contact-inner-->
+        </div><!--//container-->
+    </section><!--//contact-->  
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
